--- a/style.css
+++ b/style.css
@@ -1,8 +1,38 @@
 body{
 	background-image: url('img/background.jpg');
 }
+
 h1,p{
 	text-align: center;
 	font-family: sans-serif;
+}
+
+img{
+	display: block;
+	position: relative;
+	top: 50%;
+	left: 35%;
+	width: 37%;
+}
+
+button{
+	background-color: black;
+	color: white;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	border-width: 0px;
+	height: 40px;
+	width: 100px;
+}
+
+footer{
 	
+	padding-top: 10px;
+	padding-bottom: 5px;
+	text-align: center;
+	position: relative;
+	background-color: black;
+	color: white;
+	font-family: cursive,sans-serif;
 }
